# anchor-cnft-transfer-and-burn

./: Anchor.toml  package.json
app/: test.ts  verboseCreateAndMint.ts
app/utils/: compression.ts
programs/cnft-transfer/: Cargo.toml
programs/cnft-transfer/src/: lib.rs
tests/: cnft-transfer.ts
